--- a/style.css
+++ b/style.css
@@ -160,15 +160,57 @@ button {
 #totalItems {
 }
 
-/* #lifeBar {
-  border: 1px solid gray;
-  width: 60%;
-  height: 20px;
-  margin: 0 auto;
-  background: linear-gradient(
-    286deg,
-    rgba(147, 255, 0, 1) 29%,
-    rgba(243, 167, 14, 1) 49%,
-    rgba(244, 24, 24, 1) 74%
-  );
+/* POP UP  */
+
+section {
+  height: 300px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+/* section.game {
+  border: 2px solid blue;
+  background-image: url("img/SI_3DSVC_SuperMarioBros_image1600w.jpeg");
+  background-size: cover;
+  margin-bottom: 2em;
+  position: relative;
 } */
+section.popUp {
+  /* border: 2px solid rgb(255, 0, 212); */
+  background-color: transparent;
+  position: absolute;
+  /* bottom: 0; */
+  backdrop-filter: blur(3px);
+  height: 100vh;
+}
+.popUpContent {
+  margin: auto;
+  height: 40%;
+  width: 40%;
+  border: 1px solid rgb(141, 143, 141);
+  background-color: rgba(248, 213, 236, 0.837);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.tryagain {
+  text-align: center;
+  height: 20%;
+  margin: auto;
+}
+
+.tryagain:hover {
+  background-color: rgb(226, 248, 231);
+  /* cursor: cell; */
+}
+
+section.popUp.hidden {
+  display: none;
+}
+
+.gameover {
+  text-align: center;
+  font-size: 3rem;
+}
