--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 * {
   box-sizing: border-box;
-  /* border: 1px solid purple; */
+  border: 1px solid purple;
 }
 
 body {
@@ -24,7 +24,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 30%;
+  width: 20%;
   padding: 0 30px;
 }
 
@@ -53,7 +53,7 @@ ul {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 50%;
+  width: 60%;
 }
 
 button {
@@ -138,7 +138,7 @@ button {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 30%;
+  width: 20%;
 }
 
 .rightSection {
@@ -149,7 +149,7 @@ button {
 }
 
 #defaultPic {
-  width: 180px;
+  width: 130px;
   margin: 0 auto;
 }
 
