--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 * {
   box-sizing: border-box;
-  border: 1px solid purple;
+  /* border: 1px solid purple; */
 }
 
 body {
@@ -65,7 +65,7 @@ button {
 
 .container {
   width: 100%;
-  height: 32.5rem;
+  height: 90%;
 }
 
 .grid {
