--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Ropa+Sans&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Ropa+Sans&display=swap");
 
+/* COLORS 
+WHITE
+rgba(248, 166, 214, 0.5) (pinkish);
+*/
+
 * {
   box-sizing: border-box;
   /* border: 1px solid purple; */
@@ -16,30 +21,31 @@ body {
   display: flex;
   flex-direction: row;
   height: 100vh;
-  /* background-image: url("img/gr.png"); */
   background-image: url("img/gr-gradien.png");
   background-repeat: no-repeat;
   background-size: cover;
-  background-color: rgb(247, 234, 240);
 }
 
-/* -------------------------------- LEFT DIV / SECTION -------------------------------- */
+/* -------------------------------- LEFT DIV -------------------------------- */
 
 #leftDiv {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 20%;
+  /* width: 20%; */
   padding: 0 30px;
 }
 
 h1 {
-  color: darkgray;
+  color: rgb(255, 255, 255);
+  -webkit-text-stroke-width: 0.3px;
+  -webkit-text-stroke-color: rgba(248, 166, 214, 0.5);
+  font-size: 4.5rem;
 }
 
-/* p {
-  color: rgb(177, 177, 179);
-} */
+li {
+  color: rgb(160, 151, 156);
+}
 
 li {
   list-style-type: none;
@@ -59,7 +65,7 @@ ul {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 60%;
+  width: 85%;
   backdrop-filter: blur(9px);
   height: 100%;
 }
@@ -175,19 +181,12 @@ section.popUp {
   margin: auto;
   height: 40%;
   width: 40%;
-  /* border: 0.5px solid rgb(255, 255, 255); */
   background-color: #cfffe7;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  /* background: linear-gradient(
-    177deg,
-    rgb(255, 209, 244) 29%,
-    rgba(207, 255, 231, 1) 69%,
-    rgba(255, 255, 255, 1) 93% */
-  /* ); */
 }
 
 .tryagain {
@@ -212,11 +211,6 @@ section.popUp {
   border: none;
 }
 
-/* .tryagain:active {
-  transform: scale(0.97);
-  box-shadow: 7px 5px 56px -10px #c3d900;
-} */
-
 section.popUp.hidden {
   display: none;
 }
@@ -227,6 +221,7 @@ section.popUp.hidden {
   font-family: "Press Start 2P", cursive;
 }
 
-.fakenews {
+.fakenews,
+.goodjob {
   display: none;
 }
