--- a/style.css
+++ b/style.css
@@ -161,14 +161,11 @@ button {
 
 /* POP UP  */
 
-section {
+section.popUp {
   height: 300px;
   width: 100%;
   display: flex;
   justify-content: center;
-}
-
-section.popUp {
   background-color: transparent;
   position: absolute;
   backdrop-filter: blur(3px);
@@ -222,6 +219,50 @@ section.popUp.hidden {
 }
 
 .fakenews,
-.goodjob {
+.goodjob,
+.winsound,
+.launch {
+  display: none;
+}
+
+/* POP UP START GAME */
+
+.popUpStart {
+  height: 300px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  background-color: transparent;
+  position: absolute;
+  backdrop-filter: blur(3px);
+  height: 100vh;
+}
+.popUpStartContent {
+  margin: auto;
+  height: 40%;
+  width: 40%;
+  background-color: #cfffe7;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.enterBtn {
+  font-family: "Press Start 2P", cursive;
+  text-align: center;
+  height: 20%;
+  margin: auto;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: 0.4s;
+  width: 40%;
+  border: none;
+  background-color: rgba(255, 255, 255, 0.7);
+  color: rgb(228, 161, 200);
+}
+
+.hide {
   display: none;
 }
