--- a/style.css
+++ b/style.css
@@ -2,15 +2,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Ropa+Sans&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Archivo+Black&family=Press+Start+2P&family=Ropa+Sans&display=swap");
 
-/* COLORS 
-WHITE
-rgba(248, 166, 214, 0.5) (pinkish);
-mint green CFFFE7;
-*/
-
 * {
   box-sizing: border-box;
-  /* border: 1px solid purple; */
 }
 
 body {
@@ -57,28 +50,20 @@ h3 {
 }
 
 li {
-  color: rgb(160, 151, 156);
-}
-
-li {
   list-style-type: none;
   margin: 15px 0;
   padding: 0 20px;
+  color: rgb(160, 151, 156);
 }
 
 ul {
   padding: 0;
   border: 2px solid rgb(206, 205, 205);
-  /* font-family: "Press Start 2P", cursive; */
   font-size: 1.2rem;
   background-color: rgba(255, 255, 255, 0.7);
-  /* height: 80px;
-  width: 130px;
-  display: flex;
-  align-items: center;
-  justify-content: center; */
   border-radius: 8px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  color: #fff;
 }
 
 /* -------------------------------- MIDDLE DIV / SECTION -------------------------------- */
@@ -125,22 +110,18 @@ button {
   background-position: center;
 }
 
-/* -------------------------------- IMAGES / IMG ROTATIONS -------------------------------- */
+/* -------------------------------- IMAGES  -------------------------------- */
 
-/* Items that need to be caught to win */
 .items {
   background-image: url("img/corgi.png");
 }
 
-/* Player img */
 .playerImg {
   background-image: url("img/trump.png");
 }
 
-/* Enemy img */
 .enemyImg {
   background-image: url("img/evileliz.png");
-  /* background-color: red; */
 }
 
 .door {
@@ -148,20 +129,7 @@ button {
   background-size: cover;
 }
 
-/* @media (max-width:500px){
-  .container {
-  width: 200px;
-  height: 200px ;
-} 
-}
-
-  .cell{
-  width: calc( 100% / 10);
-  height:cacl( 100% / 10);
-  background-color: palevioletred;
- } */
-
-/* -------------------------------- LEFT DIV / SECTION -------------------------------- */
+/* -------------------------------- RIGHT DIV / SECTION -------------------------------- */
 
 #rightDiv {
   display: flex;
@@ -214,7 +182,6 @@ section.popUp {
 }
 
 .popUpContent {
-  /* background-image: url("img/gradient-background.webp"); */
   background-image: url("img/gr-gradien.png");
   margin: auto;
   height: 40%;
@@ -346,7 +313,6 @@ section.popUp.hidden {
 }
 
 .enterBtn:hover {
-  /* background-color: rgba(255, 255, 255, 0.3); */
   transition: 0.5s;
   box-shadow: 7px 5px 56px -14px #d33f7d;
   width: 40%;
@@ -365,8 +331,6 @@ section.popUp.hidden {
 .outlinedtxt {
   color: white;
   font-size: 2.2rem;
-  /* -webkit-text-stroke-width: 2px;
-  -webkit-text-stroke-color: rgba(156, 151, 154, 0.5); */
 }
 
 .hide {
